--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 # 基于KMeans聚类的协同过滤推荐算法应用
 ## 算法原理
 ### 1. 无监督学习
-![png](unsupervisedML.png)
+![png](./img/unsupervisedML.png)
 
 ### 2. 无监督学习--聚类分析
 聚类学习将数据集中的样本分成若干个互不相交的子集（称为簇cluster）。
